# mydata-rag-service

./: .gitignore  README.md
backend-api/: Dockerfile  pyproject.toml
backend-api/src/: main.py
mrs-backend-api/: Dockerfile  README.md  pyproject.toml
mrs-backend-api/deployment/gunicorn/: configuration.py
mrs-backend-api/deployment/supervisor/: supervisord.conf
mrs-backend-api/env/: .env.dev  .env.local
mrs-backend-api/src/: main.py
mrs-backend-api/src/agent/: mrs_agent.py
mrs-backend-api/src/packet/: mrs_packet.py
mrs-core/: README.md  pyproject.toml
mrs-core/core/api/client/: base.py  openai_client.py
mrs-core/core/api/packet/: base.py  openai_packet.py
mrs-core/core/common/: constant.py  exception.py  logger.py  settings.py
mrs-core/core/env/: .env.dev  .env.local
mrs-core/core/vectordb/client/: weaviate_client.py
mrs-embedding/: README.md  pyproject.toml
mrs-embedding/src/: main.py
mrs-embedding/src/configuration/: setting.py
mrs-embedding/src/embedder/: document_embedder.py
script/: deploy_mrs_backend_api.sh  init.sh  mrs.config
script/run/: run_mrs_backend_api.sh  run_mrs_weaviate.sh
script/stop/: stop_mrs_backend_api.sh  stop_mrs_weaviate.sh
