[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["Taesoo Lim <tslim@mnc.ai>"]
packages = [{ from = "src", include = "*" }]

[tool.poetry.dependencies]
python = "3.10.14"

### COMMON
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
python-dotenv = "1.0.1"
# WEB Framework
fastapi = "0.115.0"
gunicorn = "23.0.0"
uvicorn = "0.31.0"
# HTTP
aiohttp = "3.10.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["core"]
